<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/your_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            android:inputType="textCapWords" />

        <!--Quiz Questions-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Question 1-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0c5e24"
                    android:padding="6dp"
                    android:text="@string/question_1"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/radio_group_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer1_1"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <RadioButton
                        android:id="@+id/answer1_2_correct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer1_2"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer1_3"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer1_4"
                        android:textAppearance="?android:textAppearanceSmall" />
                </RadioGroup>

            </LinearLayout>
            <!--Question 2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0c5e24"
                    android:padding="6dp"
                    android:text="@string/question_2"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2_1"
                    android:textAppearance="?android:textAppearanceSmall" />

                <CheckBox
                    android:id="@+id/answer2_2_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2_2"
                    android:textAppearance="?android:textAppearanceSmall" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2_3"
                    android:textAppearance="?android:textAppearanceSmall" />

                <CheckBox
                    android:id="@+id/answer2_4_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2_4"
                    android:textAppearance="?android:textAppearanceSmall" />


            </LinearLayout>
            <!--Question 3-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0c5e24"
                    android:padding="6dp"
                    android:text="@string/question_3"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/radio_group_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer3_1"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <RadioButton
                        android:id="@+id/answer3_2_correct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer3_2"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer3_3"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer3_4"
                        android:textAppearance="?android:textAppearanceSmall" />
                </RadioGroup>

            </LinearLayout>
            <!--Question 4-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0c5e24"
                    android:padding="6dp"
                    android:text="@string/question_4"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/answer4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_of_country"
                        android:inputType="textCapWords"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <TextView
                        android:id="@+id/display_nigeria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/empty"
                        android:textColor="#0000ff"
                        android:textSize="14sp" />
                </LinearLayout>


            </LinearLayout>
            <!--Question 5-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0c5e24"
                    android:padding="6dp"
                    android:text="@string/question_5"
                    android:textColor="#fff"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/radio_group_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer5_1"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <RadioButton
                        android:id="@+id/answer5_2_correct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer5_2"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer5_3"
                        android:textAppearance="?android:textAppearanceSmall" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer5_4"
                        android:textAppearance="?android:textAppearanceSmall" />
                </RadioGroup>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/emptyForMessage"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/view_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="2dp"
            android:background="@drawable/my_button"
            android:onClick="submit"
            android:text="@string/submit"
            android:textColor="#fff" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:background="@drawable/my_button"
            android:onClick="reset_button"
            android:text="@string/reset"
            android:textColor="#fff"
            android:visibility="gone" />


    </LinearLayout>

</ScrollView>